# reliable-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
benches/: throughput.rs
docs/: performance_design.md
docs/decisions/: ADR-001-zero-alloc-drain-api.md  ADR-002-process-fragment-queue-param.md  ADR-003-bounded-ack-buf.md  ADR-004-ack-buffer-size-wired.md
docs/sessions/: 2026-05-22-codebase-audit-and-roadmap.md  2026-05-22-hot-path-alloc-audit.md
docs/templates/: decision_template.md  session_summary_template.md
examples/: basic.rs  client_server.rs  udp_loopback.rs  with_packet_loss.rs
src/: config.rs  endpoint.rs  fragment.rs  lib.rs  packet.rs  packet_queue.rs  sequence_buffer.rs  utils.rs
tests/: integration.rs
